<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeaconsConfigApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="name">Name</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="power">Power</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <!-- Main Activity -->
    <string name="main_my_beacons_button">My Beacons</string>
    <string name="main_add_button">Configure a new beacon</string>
    <string name="title_activity_my_beacons">My Beacons</string>
    <string name="title_activity_new_beacon">New Beacon</string>

    <!-- Ask login -->
    <string name="ask_login_ask_textView">You have to login first</string>
    <!-- Features -->
    <string name="ble_not_supported">Sorry but seems that your device does not support Bluetooth Low Energy</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main">Beacons Config App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Scan Beacons -->
    <string name="uuid">UUID</string>
    <string name="major_label">Major</string>
    <string name="minor_label">Minor</string>
    <string name="power_label">Power</string>

    <!-- Config Beacon -->
    <string name="beacon_content_url">Beacon\'s content URL</string>
    <string name="beacon_name">Beacon\'s name</string>
    <string name="beacon_description">Beacon\'s description</string>

    <!-- Loading -->
    <string name="loading_my_beacons">Loading your beacons</string>
    <string name="loading_config_beacon">Configuring your beacon</string>

    <!-- Errors -->
    <string name="error_no_internet_connection">Error getting your beacons. Make sure you have an Internet connection</string>
    <string name="error_config_beacon">Error configuring this beacon. Make sure you have an Internet connection</string>
    <string name="error_login">Wrong username or password</string>
    <string name="error_beacon_delete">Cannot delete this beacon. Make sure you have an Internet connection</string>

    <!-- Success -->
    <string name="success_config_beacon">Beacon configured successfully</string>
    <string name="success_login">You are logged in now</string>
    <string name="success_beacon_delete">Beacon deleted from your account successfully</string>

    <!-- My Beacons -->
    <string name="my_beacons_delete_dialog_message">Do you want to delete this beacon configuration from your account?</string>

    <!-- Defaults -->
    <string name="default_username">samfcmc</string>
    <string name="default_password">as5592955</string>
    <string name="default_beacon_name">Something awesome</string>
    <string name="default_beacon_description">Sales! 50% discount in the store next to you</string>
    <string name="default_beacon_content">samfcmc.github.io/beacons-client-app</string>
    <string name="delete">Delete</string>
</resources>
